--- a/수행결과/0717작업/swipe/swipe.html
+++ b/수행결과/0717작업/swipe/swipe.html
@@ -26,6 +26,7 @@
         .score{width: 100%; height: 90%; border: 1px solid blue;}
         .btn{height: 100%; font-weight: bold; line-height: 20px;}
         #canvas{border: 1px solid white; float: left; width: 100%; background-color: white;}
+        .life{border: 1px dotted white; text-align: center;}
     </style>
 </head>
 <body>
@@ -39,7 +40,12 @@
                 <button id="home" class="btn bg-white">Home</button>
             </div>
             <div class="score">
-
+                <div class="life">
+                    <p>남은 생명</p>
+                    <img src="./image/heart.png" alt="heart" width="50px" height="50px" id="life1">
+                    <img src="./image/heart.png" alt="heart" width="50px" height="50px" id="life2">
+                    <img src="./image/heart.png" alt="heart" width="50px" height="50px" id="life3">
+                </div>
             </div>
         </div>
 
