--- a/수행결과/0719작업/설정창 + 게임오버창/swipe.html
+++ b/수행결과/0719작업/설정창 + 게임오버창/swipe.html
@@ -23,7 +23,7 @@
         .infomation{float: right; width: 20%; height: 560px; border: 1px solid white;}
         .game{width: 80%;}
         /* .menu{width: 100%; height: 50%; border: 1px solid white; text-align: center;} */
-        .score{width: 100%; height: 50%; border: 1px solid blue; text-align: center;}
+        .score{width: 100%; height: auto; border-top:1px double white; text-align: center;}
         .btn{height: 100%; font-weight: bold; line-height: 20px;}
         #canvas{border: 1px solid white; float: left; width: 100%; background-color: black;}
         
@@ -112,6 +112,11 @@
                     style="overflow: auto; text-overflow: clip;">score:
                     <!-- 실질적인 점수 출력 부분. id=score -->
                     <span id="score">0</span>
+                </p>
+                <!--최고 점수 부분-->
+                <p>
+                    highscore<br><br>
+                    <span id="highscore">0</span>
                 </p>
             </div>
         </div>
