게임 설명 메뉴 변경

--- a/수행결과/0721_wk/title.html
+++ b/수행결과/0721_wk/title.html
@@ -175,14 +175,11 @@
                 <div class="modal-body">
                 아래의 바를 화살표를 이용하여 좌우로 움직이고 위에있는 모든 벽돌을 부셨을 때 클리어
                     <hr>
-                <img src="http://cdn.wikimg.net/strategywiki/images/3/3b/Arkanoid_Gray_Player.gif"> << 목숨 추가 <br>
-                <img src="http://cdn.wikimg.net/strategywiki/images/4/4b/Arkanoid_Red_Lasers.gif"> << 레이저 발사   <br>
-                <img src="http://cdn.wikimg.net/strategywiki/images/b/b8/Arkanoid_Blue_Enlarge.gif"> << 바 길이 증가<br>
-                <img src="http://cdn.wikimg.net/strategywiki/images/8/85/Arkanoid_Green_Catch.gif"> << 공을 잡았다가 스페이스바 클릭시 다시 발사<br>
-                <img src="http://cdn.wikimg.net/strategywiki/images/4/41/Arkanoid_Orange_Slow.gif"> << 공의 속도가 줄어듬<br>
-                <img src="http://cdn.wikimg.net/strategywiki/images/6/69/Arkanoid_Violet_Break.gif"> << 화면 오른쪽에 탈출구가 생김<br>
-                <img src="http://cdn.wikimg.net/strategywiki/images/b/bb/Arkanoid_Cyan_Disruption.gif"> << 공이 3개로 분할됨 (하나의 공만 살아있어도 죽지 않는다)
-                </div>
+                    <img src="./image/cloneball.gif" width="50px" height="30px"> << 공 개수 증가 <br>
+                    <img src="./image/speed.gif" width="50px" height="30px"> << 공 속도 증가   <br>
+                    <img src="./image/barplus.gif" width="50px" height="30px"> << 바 길이 증가<br>
+                    <img src="./image/plusheart.gif" width="50px" height="30px"> << 생명 추가<br>
+                    <img src="./image/jump.gif" width="50px" height="30px"> << 워프<br>
         
                 <!-- Modal footer -->
                 <div class="modal-footer">
