--- a/수행결과/0721_wk/title.html
+++ b/수행결과/0721_wk/title.html
@@ -180,7 +180,7 @@
                     <img src="./image/barplus.gif" width="50px" height="30px"> << 바 길이 증가<br>
                     <img src="./image/plusheart.gif" width="50px" height="30px"> << 생명 추가<br>
                     <img src="./image/jump.gif" width="50px" height="30px"> << 워프<br>
-        
+                </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
